// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Letter /> highlights correct 1`] = `
<div>
  <button
    class="css-1nbs5sr"
  >
    a
  </button>
</div>
`;

exports[`<Letter /> highlights incorrect 1`] = `
<div>
  <button
    class="css-h13a0u"
  >
    a
  </button>
</div>
`;

exports[`<Letter /> renders 1`] = `
<div>
  <button
    class="css-149pnfs"
  >
    a
  </button>
</div>
`;
